Fixed an error on mobile displays resulting in the second particle box not displaying in its full height.

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -131,13 +131,13 @@ header {
     z-index: 20;
 }
 #particles-js {
-    height: 100vh;
+    height: 100%;
     width: 98vw;
     position: absolute;
     z-index: -1;
 }
 #particles-js2 {
-    height: 100vh;
+    height: 100%;
     width: 97vw;
     position: absolute;
     z-index: -1;
